--- a/static/site.css
+++ b/static/site.css
@@ -881,7 +881,7 @@ body {
 		background-color: var(--AzureRadiance);
 		display: inline-block;
 		padding: 5px 24px 5px 24px;
-		margin: 0 4px 8px 0;
+		margin: 0 4px 16px 0;
 		border-radius: 24px;
 		transition: 0.3s;
 		cursor: pointer;
@@ -1023,14 +1023,14 @@ body {
 		}
 	}
 
-	.techman-wrapper {
+	.booking-wrapper {
 		top: 0;
 		left: 0;
-		width: calc(100% - 1rem);
-		height: calc(100% - 60px);
-		overflow: hidden;
-		max-height: 100%;
-		padding: 0 0.5rem;
+		width: calc(100%);
+		height: calc(100%);
+		overflow: scroll;
+		max-height: calc(100% -45px);
+		padding: 0;
 	}
 
 	.modal-overlay {
@@ -1059,15 +1059,15 @@ body {
 	}
 
 	.kicker.label {
-		font-size: 10px;
-		opacity: 70%;
-		text-align: center;
-		margin: 10px auto 0 auto;
+		font-size: 11px;
+		opacity: 100%;
+		text-align: left;
+		margin: 11px auto 0 0.75rem;
 	}
 
 	.caption.label {
 		font-size: 12px;
-		margin: 8px 10px auto 10px;
+		margin: 8px 0.5rem auto 10px;
 		cursor: pointer;
 	}
 
@@ -1083,7 +1083,7 @@ body {
 
 	.modal {
 		max-width: 100%;
-		height: 60%;
+		height: 70%;
 	}
 
 }
@@ -1166,7 +1166,7 @@ body {
 		background-size: 1.15rem;
 		text-indent: -10000px;
 		margin-top: -0.5rem;
-		z-index: 1;
+		z-index: 0;
 		transition: 0.4s;
 	}
 
