--- a/static/responsive.css
+++ b/static/responsive.css
@@ -57,73 +57,69 @@
 
 	.col-1 {
 		flex-basis: calc(49.998% - 16px);
-		margin: 0 8px;
+		margin: 0 0;
 	}
 
 	.col-2 {
 		flex-basis: calc(49.998% - 16px);
-		margin: 0 8px;
+		margin: 0 0;
 	}
 
 	.col-3 {
 		flex-basis: calc(49.998% - 16px);
-		margin: 0 8px;
+		margin: 0 0;
 	}
 
 	.col-4 {
 		flex-basis: calc(99.996% - 16px);
-		margin: 0 8px;
+		margin: 0 0;
 	}
 
 	.col-5 {
 		flex-basis: calc(99.996% - 16px);
-		margin: 0 8px;
+		margin: 0 0;
 	}
 
 	.col-6 {
 		flex-basis: calc(99.996% - 16px);
-		margin: 0 8px;
+		margin: 0 0;
 	}
 
 	.col-7 {
 		flex-basis: calc(99.996% - 16px);
-		margin: 0 8px;
+		margin: 0 0;
 	}
 
 	.col-8 {
 		flex-basis: calc(99.996% - 16px);
-		margin: 0 8px;
+		margin: 0 0;
 	}
 
 	.col-9 {
 		flex-basis: calc(99.996% - 16px);
-		margin: 0 8px;
+		margin: 0 0;
 	}
 
 	.col-10 {
 		flex-basis: calc(99.996% - 16px);
-		margin: 0 8px;
+		margin: 0 0;
 	}
 
 	.col-11 {
 		flex-basis: calc(99.996% - 16px);
-		margin: 0 8px;
+		margin: 0 0;
 	}
 
 	.col-12 {
 		flex-basis: calc(99.996% - 16px);
-		margin: 0 8px;
+		margin: 0 0;
 	}
 
 	/* -- Typography - Mobile -- */
 
-	h1, h2, h3, h4, h5, h6, p {
+	h1, h2, h3, h4, h5, h6, p, ul, ol {
 		color: var(--Rhino);
 		margin-top: 0rem;
-	}
-
-	ul {
-		padding: 0;
 	}
 
 	h1 {
@@ -178,7 +174,27 @@
 		font-size: 14px;
 		line-height: 26px;
 		font-weight: 400;
-		margin-bottom: 0.75rem;
+		margin-bottom: 0.5rem;
+	}
+
+	ul {
+		list-style: disc;
+		font-size: 14px;
+		line-height: 24px;
+		font-weight: 400;
+		margin-bottom: 0.5rem;
+		margin-top: -0.25rem;
+		padding-left: 0.75rem;
+	}
+
+	ol {
+		list-style: decimal-leading-zero;
+		font-size: 14px;
+		line-height: 24px;
+		font-weight: 400;
+		margin-bottom: 0.5rem;
+		margin-top: -0.25rem;
+		padding-left: 0.75rem;
 	}
 
 	p.p-plus {
@@ -297,8 +313,8 @@
 	}
 
 	h1.h1-plus {
-		font-size: 74px;
-		line-height: 84px;
+		font-size:60px;
+		line-height: 74px;
 	}
 
 	h2 {
@@ -329,6 +345,16 @@
 	p {
 		font-size: 16px;
 		line-height: 28px;
+	}
+
+	ul {
+		font-size: 16px;
+		line-height: 28px;
+	}
+
+	ol {
+		font-size: 16px;
+		line-height: 26px;
 	}
 
 	p.p-plus {
