Schema and scroll adjustment

--- a/static/site.css
+++ b/static/site.css
@@ -499,6 +499,7 @@ body {
 		bottom: 0;
 		left: 0;
 		margin-top: -10vh;
+		margin-bottom: 0px;
 	}
 
 	.sec-hero .background-image img {
@@ -569,7 +570,8 @@ body {
 		box-sizing: content-box;
 		left: 50%;
 		margin-left: -9px;
-		transform: translateY(22vw);
+		margin-top: -24px;
+		transform: translateY(-2rem);
 		display: none;
 	}
 
@@ -774,6 +776,7 @@ body {
 
 	.sec-hero .background-image {
 		margin-top: -11vh;
+		margin-bottom: -24px;
 	}
 
 	.sec-hero .background-image img {
@@ -788,7 +791,6 @@ body {
 	}
 
 	.sec-hero-scroll {
-		transform: translateY(15vw);
 		display: block;
 	}
 
@@ -840,10 +842,6 @@ body {
 		margin: 0 -6vw 0 0;
 	}
 
-	.sec-hero-scroll {
-		transform: translateY(14vw);
-	}
-
 	.sec-cta-container {
 		padding: 2.25rem 38.332% 2.25rem 8.333%;
 	}
@@ -856,10 +854,6 @@ body {
 		width: 95vw;
 		max-height: 100vh;
 		margin: 0 -4vw 0 0;
-	}
-
-	.sec-hero-scroll {
-		transform: translateY(17vw);
 	}
 
 	.sec-split {
@@ -898,10 +892,6 @@ body {
 	.sec-cta-image img {
 		margin: -7rem 0 -2.4rem 6rem;
 		width: 55vw;
-	}
-
-	.sec-hero-scroll {
-		transform: translateY(15vw);
 	}
 
 	.sec-cta-container {
