--- a/static/responsive.css
+++ b/static/responsive.css
@@ -135,6 +135,11 @@
 		margin-bottom: 0.75rem;
 	}
 
+	.sec-404 .wrapper h1 {
+		font-size: 32px;
+		line-height: 40px;
+	}
+
 	h2 {
 		font-size: 30px;
 		line-height: 38px;
@@ -315,6 +320,11 @@
 	h1.h1-plus {
 		font-size:60px;
 		line-height: 74px;
+	}
+
+	.sec-404 .wrapper h1 {
+		font-size: 46px;
+		line-height: 56px;
 	}
 
 	h2 {
