--- a/static/site.css
+++ b/static/site.css
@@ -1097,7 +1097,7 @@ body {
 		-webkit-box-shadow: 0px 0px 0px 8px rgba(34, 34, 34, 0.15);
 		-moz-box-shadow: 0px 0px 8px 8px rgba(34, 34, 34, 0.15);
 		box-shadow: 0px 0px 8px 8px rgba(34, 34, 34, 0.15);
-		overflow: hidden;
+		overflow: scroll;
 		z-index: 100;
 		background-color: var(--White);
 		transition: 0.4s;
@@ -1180,7 +1180,8 @@ body {
 
 	.modal {
 		max-width: 100%;
-		height: 70%;
+		height: inherit;
+		max-height: 70%;
 	}
 
 }
